dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-2
spec:
  selector:
    matchLabels:
      app: myapp-2
  replicas: 6
  template:
    metadata:
      labels:
        app: myapp-2
    spec:
      containers:
      - name: myapp-2
        image: image-registry.openshift-image-registry.svc:5000/devops/poc-devops:latest
        ports:
        - containerPort: 8080
