dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cargo-service
spec:
  selector:
    app: cargo
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
