dev/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: devops
spec:
  host: frontend-devops.apps.stgocp.mwanitest.local
  to:
    kind: Service
    name: node-hello-world
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  wildcardPolicy: None
